--- a/style.css
+++ b/style.css
@@ -3,20 +3,46 @@
     height: 100%;
 }
 .title{
-    background-color: #ffc107 ;
+    border: 1px solid #ffc107;
+    background-color: #ffc107;
     border-radius: 10px;
     padding: 5px;
-    color: white;
+    color: black;
     font-weight: bold;
 }
 .title:hover{
-    text-decoration: underline;
+    border: 1px solid #ffc107;
+    background-color: black;
+    color: #ffc107;
 }
 
 .container-fluid{
-    margin: auto;
+   padding: 0 10%;
 }
-.card{
+.navbar{
+    padding:20px 0 40px;
+    font-size: 17px;
+}
+.nav-item{
+    padding: 0 16px;
+
+}
+.description{
+    padding: 50px;
+    font-size: 25px;
+}
+.description h1{
+    font-size: 70px;
+}
+.btn{
+    margin:20px 0 0;
+}
+.profile-pic{
+    width: 100%;
+    height: 100%;
+}
+/* .card{
     float: left;
     margin: 20px auto 20px auto;
-}
+} */
+
