--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
    padding: 0 10%;
 }
 .navbar{
-    padding:20px 0 40px;
+    padding:20px 0 60px;
     font-size: 17px;
 }
 .nav-item{
@@ -28,7 +28,8 @@
 
 }
 .description{
-    padding: 50px;
+    padding-left: 15px;
+
     font-size: 25px;
 }
 .description h1{
@@ -40,6 +41,21 @@
 .profile-pic{
     width: 100%;
     height: 100%;
+}
+/* Second Section */
+.about{
+    color: #cccccc;
+    padding: 200px 100px 100px 100px;
+}
+.about span{
+    border-bottom: 5px solid #ffc107;
+
+    
+}
+.about-me{
+    padding-top: 80px;
+    padding-bottom: 100px;
+    color:#cccccc ;
 }
 /* .card{
     float: left;
