--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Work Sans', sans-serif;
+}
 #first-section{
     background-color: black;
     height: 100%;
@@ -45,7 +48,7 @@
 /* Second Section */
 .about{
     color: #cccccc;
-    padding: 200px 100px 100px 100px;
+    padding: 200px 100px 100px 80px;
 }
 .about span{
     border-bottom: 5px solid #ffc107;
@@ -61,4 +64,18 @@
     float: left;
     margin: 20px auto 20px auto;
 } */
+@media (max-width: 600px){
+    .about{
+        text-align: center;
+        padding: 150px 50px 50px 50px;
+    }
+    .btn-mobile{
+        margin-left: 84px;
+       
+    }
+.about-me{
+padding-top: 50px;
+text-align: justify;
+}
 
+}
