--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 }
 .description{
     padding-left: 15px;
-
+    color: #cccccc;
     font-size: 25px;
 }
 .description h1{
@@ -48,7 +48,7 @@ body{
 /* Second Section */
 .about{
     color: #cccccc;
-    padding: 200px 100px 100px 80px;
+    padding: 200px 100px 100px 70px;
 }
 .about span{
     border-bottom: 5px solid #ffc107;
@@ -65,17 +65,23 @@ body{
     margin: 20px auto 20px auto;
 } */
 @media (max-width: 600px){
+    .description h1{
+        font-size: 50px;
+    }
+    .description{
+        font-size: 20px;
+    }
     .about{
         text-align: center;
         padding: 150px 50px 50px 50px;
     }
-    .btn-mobile{
-        margin-left: 84px;
-       
-    }
 .about-me{
 padding-top: 50px;
 text-align: justify;
+text-align: center;
+}
+.about-me p {
+    text-align: justify;
 }
 
 }
