--- a/style.css
+++ b/style.css
@@ -60,11 +60,114 @@ body{
     padding-bottom: 100px;
     color:#cccccc ;
 }
+.skills-h1{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.image-skills{
+    height: 300px;
+    width: 500px;
+    margin: 20px;
+    border-radius: 20px;
+}
+
+.skills {
+    position: relative;
+    
+  }
+  
+  .skills .content1 {
+    position: absolute;
+    top: 0;
+    color: #f1f1f1;
+    padding: 30px;
+    border-radius: 20px;
+ 
+  }
+  .content1{
+    text-align: left;
+    margin: 20px;
+    width: 500px;
+    height: 300px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(0, 105, 148, 0.7); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+    
+  }
+.fa{
+
+    font-size: 80px;
+}
+.skills .content2{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content2{
+    text-align: left;
+    margin: 20px;
+    width: 500px;
+    height: 300px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(0,216,0, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
+}
+.skills .content3{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content3{
+    text-align: left;
+    margin: 20px;
+    width: 500px;
+    height: 300px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(100,50,180, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
+}
+.skills .content4{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content4{
+    text-align: left;
+    margin: 20px;
+    width: 500px;
+    height: 300px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(216, 70 ,0, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
+}
+
+
+/* 206, 14, 206 */
+
 /* .card{
     float: left;
     margin: 20px auto 20px auto;
 } */
 @media (max-width: 600px){
+	
     .description h1{
         font-size: 50px;
     }
@@ -82,6 +185,104 @@ text-align: center;
 }
 .about-me p {
     text-align: justify;
+}
+
+.image-skills{
+    height: 250px;
+    width: 300px;
+    margin: 20px;
+    border-radius: 20px;
+}
+.skills {
+    position: relative;
+    
+  }
+  .fa{
+
+    font-size: 20px;
+}
+  
+  .skills .content1 {
+    position: absolute;
+    top: 0;
+    color: #f1f1f1;
+    padding: 20px;
+    border-radius: 20px;
+ 
+  }
+  .content1{
+    text-align: left;
+    margin: 20px;
+    margin-left: 60px;
+    width: 300px;
+    height: 250px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(0, 105, 148, 0.7); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 13px;
+    font-family: ('Work Sans');
+    
+  }
+.fa{
+
+    font-size: 80px;
+}
+.skills .content2{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content2{
+    text-align: left;
+    margin: 20px;
+    width: 300px;
+    height: 250px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(0,216,0, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
+}
+.skills .content3{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content3{
+    text-align: left;
+    margin: 20px;
+    width: 300px;
+    height: 250px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(100,50,180, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
+}
+.skills .content4{
+    position: absolute;
+    top: 0;
+    color: white;
+    padding: 30px;
+    border-radius: 20px;
+}
+.content4{
+    text-align: left;
+    margin: 20px;
+    width: 300px;
+    height: 250px;
+    background: rgb(137,207,240); /* Fallback color */
+    background: rgba(216, 70 ,0, 0.8); /* Black background with 0.5 opacity */
+    font-weight: bold;
+    font-size: 20px;
+    font-family: ('Work Sans');
+
 }
 
 }
