--- a/style.css
+++ b/style.css
@@ -61,14 +61,21 @@ body{
     color:#cccccc ;
 }
 .skills-h1{
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    text-align: center;
+    color:#cccccc ;
+    
+}
+.skills-h1 span {
+    border-bottom: 5px solid #ffc107;
 }
 
 .image-skills{
     height: 300px;
     width: 500px;
-    margin: 20px;
+    margin: 10px;
+    padding: 0;
     border-radius: 20px;
 }
 
@@ -83,11 +90,12 @@ body{
     color: #f1f1f1;
     padding: 30px;
     border-radius: 20px;
+  
  
   }
   .content1{
     text-align: left;
-    margin: 20px;
+    margin: 10px;
     width: 500px;
     height: 300px;
     background: rgb(137,207,240); /* Fallback color */
@@ -110,7 +118,7 @@ body{
 }
 .content2{
     text-align: left;
-    margin: 20px;
+    margin: 10px;
     width: 500px;
     height: 300px;
     background: rgb(137,207,240); /* Fallback color */
@@ -129,7 +137,7 @@ body{
 }
 .content3{
     text-align: left;
-    margin: 20px;
+    margin: 10px;
     width: 500px;
     height: 300px;
     background: rgb(137,207,240); /* Fallback color */
@@ -148,7 +156,7 @@ body{
 }
 .content4{
     text-align: left;
-    margin: 20px;
+    margin: 10px;
     width: 500px;
     height: 300px;
     background: rgb(137,207,240); /* Fallback color */
@@ -166,7 +174,7 @@ body{
     float: left;
     margin: 20px auto 20px auto;
 } */
-@media (max-width: 600px){
+@media screen and (max-width: 700px){
 	
     .description h1{
         font-size: 50px;
@@ -195,6 +203,7 @@ text-align: center;
 }
 .skills {
     position: relative;
+   
     
   }
   .fa{
@@ -206,14 +215,14 @@ text-align: center;
     position: absolute;
     top: 0;
     color: #f1f1f1;
-    padding: 20px;
+    padding: 30px;
     border-radius: 20px;
  
   }
   .content1{
     text-align: left;
     margin: 20px;
-    margin-left: 60px;
+
     width: 300px;
     height: 250px;
     background: rgb(137,207,240); /* Fallback color */
@@ -242,7 +251,7 @@ text-align: center;
     background: rgb(137,207,240); /* Fallback color */
     background: rgba(0,216,0, 0.8); /* Black background with 0.5 opacity */
     font-weight: bold;
-    font-size: 20px;
+    font-size: 13px;
     font-family: ('Work Sans');
 
 }
