--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body{
     height: 300px;
     width: 500px;
     margin: 10px;
-    padding: 0;
+    
     border-radius: 20px;
 }
 
@@ -174,7 +174,8 @@ body{
     float: left;
     margin: 20px auto 20px auto;
 } */
-@media screen and (max-width: 700px){
+ @media screen and (max-width: 650px){
+ 
 	
     .description h1{
         font-size: 50px;
@@ -202,7 +203,6 @@ text-align: center;
     border-radius: 20px;
 }
 .skills {
-    position: relative;
    
     
   }
@@ -225,8 +225,8 @@ text-align: center;
 
     width: 300px;
     height: 250px;
-    background: rgb(137,207,240); /* Fallback color */
-    background: rgba(0, 105, 148, 0.7); /* Black background with 0.5 opacity */
+    background: rgb(137,207,240); 
+    background: rgba(0, 105, 148, 0.7); 
     font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
@@ -248,8 +248,8 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    background: rgb(137,207,240); /* Fallback color */
-    background: rgba(0,216,0, 0.8); /* Black background with 0.5 opacity */
+    background: rgb(137,207,240); 
+    background: rgba(0,216,0, 0.8); 
     font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
@@ -267,8 +267,8 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    background: rgb(137,207,240); /* Fallback color */
-    background: rgba(100,50,180, 0.8); /* Black background with 0.5 opacity */
+    background: rgb(137,207,240); 
+    background: rgba(100,50,180, 0.8); 
     font-weight: bold;
     font-size: 20px;
     font-family: ('Work Sans');
@@ -286,12 +286,11 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    background: rgb(137,207,240); /* Fallback color */
-    background: rgba(216, 70 ,0, 0.8); /* Black background with 0.5 opacity */
-    font-weight: bold;
+    background: rgb(137,207,240); 
+    background: rgba(216, 70 ,0, 0.8); 
     font-size: 20px;
     font-family: ('Work Sans');
 
 }
 
-}
+} 
