making site responsive

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body{
 
 .container-fluid{
    padding: 0 10%;
+  
+	
+ 
 }
 .navbar{
     padding:20px 0 60px;
@@ -195,15 +198,20 @@ text-align: center;
 .about-me p {
     text-align: justify;
 }
+.container-fluid{
+    padding: 5%;
+}
 
 .image-skills{
+    
     height: 250px;
     width: 300px;
     margin: 20px;
+   
     border-radius: 20px;
 }
 .skills {
-   
+  position: relative; 
     
   }
   .fa{
@@ -213,6 +221,7 @@ text-align: center;
   
   .skills .content1 {
     position: absolute;
+ 
     top: 0;
     color: #f1f1f1;
     padding: 30px;
