--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
     padding: 0 16px;
 
 }
+
 .description{
     padding-left: 15px;
     color: #cccccc;
@@ -170,6 +171,13 @@ font-size: 40px;
     font-size: 20px;
     font-family: ('Work Sans');
 
+}
+.project-works{
+    /* height: 200px; */
+    /* width: 6000px; */
+    margin: 0;
+    padding: 0;
+    /* border: 8px solid red; */
 }
 
 
