--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ html{
     scroll-snap-type: y mandatory;
 }
 .description{
+    padding-top: 30px;
     padding-left: 15px;
     color: #cccccc;
-    font-size: 25px;
+    font-size: 40px;
 }
 .description h1{
     font-size: 70px;
@@ -113,10 +114,14 @@ html{
     
   }
 .fa-brands{
-font-size: 40px;
+font-size: 30px;
+}
+.social-contact{
+    color: #cccccc;
+    
 }
 .fa-solid{
-    font-size: 40px;
+    font-size: 30px;
 }
 .skills .content2{
     position: absolute;
@@ -181,31 +186,30 @@ font-size: 40px;
     width: inherit;
     height: 200px;
 }
+/* End of CSS styles for desktop */
 
 
-/* 206, 14, 206 */
 
-/* .card{
-    float: left;
-    margin: 20px auto 20px auto;
-} */
+/* Beginning of CSS styles for mobile  */
+
  @media screen and (max-width: 650px){
  
 	
-    .description h1{
-        font-size: 50px;
-    }
-    .description{
-        font-size: 20px;
-    }
-    .about{
-        text-align: center;
-        padding: 150px 50px 50px 50px;
-    }
+.description h1{
+    font-size: 50px;
+}
+.description{
+    padding-top: 0;
+    font-size: 20px;
+}
+.about{
+    text-align: center;
+    padding: 150px 50px 50px 50px;
+}
 .about-me{
-padding-top: 50px;
-text-align: justify;
-text-align: center;
+    padding-top: 50px;
+    text-align: justify;
+    text-align: center;
 }
 .about-me p {
     text-align: justify;
@@ -219,16 +223,13 @@ text-align: center;
     height: 250px;
     width: 300px;
     margin: 20px;
-   
     border-radius: 20px;
 }
 .skills {
   position: relative; 
-    
-  }
+    }
 
-  
-  .skills .content1 {
+ .skills .content1 {
     position: absolute;
  
     top: 0;
@@ -240,20 +241,18 @@ text-align: center;
   .content1{
     text-align: left;
     margin: 20px;
-
     width: 300px;
     height: 250px;
-    /* background: rgb(137,207,240); 
-    background: rgba(0, 105, 148, 0.7);  */
     font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
     
   }
-.fa{
 
-    font-size: 80px;
+.fa{
+ font-size: 80px;
 }
+
 .skills .content2{
     position: absolute;
     top: 0;
@@ -266,8 +265,6 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    /* background: rgb(137,207,240); 
-    background: rgba(0,216,0, 0.8);  */
     font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
@@ -285,8 +282,6 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    /* background: rgb(137,207,240); 
-    background: rgba(100,50,180, 0.8);  */
     font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
@@ -304,8 +299,7 @@ text-align: center;
     margin: 20px;
     width: 300px;
     height: 250px;
-    /* background: rgb(137,207,240); 
-    background: rgba(216, 70 ,0, 0.8);  */
+    font-weight: bold;
     font-size: 13px;
     font-family: ('Work Sans');
 
